	* gcc-versionno/gcc/gm2/tools-src/mklink.c: applied gm2-1.8.2 formatting and bug fixes.
	* gcc-versionno/gcc/gm2/tools-src/tidydates.py: applied gm2-1.8.2 formatting and bug fixes.
	* gcc-versionno/gcc/gm2/version.c: applied gm2-1.8.2 formatting and bug fixes.
	* gcc-versionno/libgm2/libpim/Makefile.am: applied gm2-1.8.2 formatting and bug fixes.
	* gcc-versionno/libgm2/libpim/Makefile.in: applied gm2-1.8.2 formatting and bug fixes.
	
2019-03-22      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/patches/gcc/trunk/01-patches:  New file.
	* gm2/patches/gcc/trunk/02-patches:  New file.
	* gm2/patches/gcc/trunk/03-patches:  New file.
	* gm2/patches/gcc/trunk/04-patches:  New file.
	* gm2/patches/gcc/trunk/05-patches:  New file.
	* gm2/patches/gcc/trunk/06-patches:  New file.
	* gm2/patches/gcc/trunk/07-patches:  New file.
	* gm2/patches/gcc/trunk/08-patches:  New file.
	* gm2/patches/gcc/trunk/09-patches:  New file.
	* gm2/patches/gcc/trunk/10-patches:  New file.
	* gm2/patches/gcc/trunk/11-patches:  New file.

2018-07-30      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2spec.c:  (fe_generate_option) do not duplicate the old
          argument.  free up a string after use.  (build_include_path)
          start the new string with a strcpy not strcat!
          (insert_option) create a new vector with an extra entry.
          (no_link) return a string which can be free'd.
	  (add_exec_name) return a string which can be free'd.

2018-07-18      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2spec.c: reformatted according to GNU coding standards.

2018-07-17      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/ObjectFiles.mod:  import ALLOCATE
          and DEALLOCATE from Storage.  Collect return results
          from close and KillIndex.
	* gm2/gm2spec.c:  reformatted and tidied up code.
	* gm2/gm2-libs/GetOpt.mod:  remove declaration of PtrToInteger.
	* gm2/gm2-libs/GetOpt.mod:  corrected record/pointer reference.
