@@ -1,0 +1,45 @@
+/* pthdummy.c provide dummy stubs to satisy bootstrap requirements.
+
+Copyright (C) 2018-2019 Free Software Foundation, Inc.
+Contributed by Gaius Mulley <gaius@glam.ac.uk>.
+
+This file is part of GNU Modula-2.
+
+GNU Modula-2 is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 3, or (at your option)
+any later version.
+
+GNU Modula-2 is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with GNU Modula-2; see the file COPYING.  If not,
+see <https://www.gnu.org/licenses/>.  */
+
+
+int
+pth_select (__attribute__ ((unused)) int p1,
+	    __attribute__ ((unused)) void *p2,
+	    __attribute__ ((unused)) void *p3,
+	    __attribute__ ((unused)) void *p4,
+	    __attribute__ ((unused)) void *p5)
+{
+  return 0;
+}
+
+
+int
+pth_uctx_create (__attribute__ ((unused)) void *p)
+{
+  return 0;
+}
+
+
+int
+pth_init (void)
+{
+  return 0;
+}
